--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ geopull = ["*.json"]
 repository = "https://github.com/mansueto-institute/geopull"
 
 [build-system]
-requires = ['setuptools']
+requires = ['setuptools', "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project.scripts]
