--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ line-length = 79
 
 [tool.mypy]
 ignore_missing_imports = true
+install_types = true
+non_interactive = true
 packages = ["src"]
 
 [tool.coverage.run]
