--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python 3.10
+      - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.11'
           cache: pip
 
       - name: Install package
@@ -27,23 +27,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install .[dev]
 
-      - name: Lint with flake8
+      - name: Lint
         run: |
-          flake8 ./src/geopull --count --exit-zero --max-complexity=15 --max-line-length=80 --statistics
+          make lint
 
-      - name: Lint with mypy
+      - name: Test
         run: |
-          mypy
-
-      - name: Lint with black
-        uses: psf/black@stable
-        with:
-          options: "--check --verbose"
-          src: "./src/geopull"
-
-      - name: Test with pytest
-        run: |
-          pytest
+          make test
 
       - name: Pytest-cov comment
         uses: MishaKav/pytest-coverage-comment@main
